<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/groups_layout_background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/groups_iv_person"
        android:layout_width="@dimen/groups_image_width"
        android:layout_height="@dimen/groups_image_height"
        app:srcCompat="@drawable/man"
        android:background="@drawable/group_person_shape" />

    <TextView
        android:layout_marginTop="@dimen/tvUsernameMarginTop"
        android:id="@+id/groups_textView_personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tvUsernameTextSize"
        android:padding="@dimen/tvUsernamePadding"
        android:textStyle="bold"
        android:text="@string/groups_tv_username" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginTop="40dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:id="@+id/groups_tv_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/group_tv_shape"
            android:text="@string/groups_btn_pages"
            android:textColor="@color/white" />

        <TextView
            android:layout_margin="8dp"
            android:padding="8dp"
            android:id="@+id/groups_tv_finishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/group_tv_shape"
            android:text="@string/groups_btn_finish"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:id="@+id/groups_tv_searchHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groups_tv_search_hint1" />

    <EditText
        android:drawableStart="@drawable/ic_icon1"
        android:drawablePadding="4dp"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="24dp"
        android:id="@+id/groups_et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/group_et_search_shape"
        android:hint="@string/groups_et_search_hint"
        android:textColorHint="@color/groups_editText_hintColor"
        android:padding="12dp" />

    <TextView
        android:gravity="center"
        android:textSize="16sp"
        android:padding="8dp"
        android:textColor="@color/groups_textView_textColor"
        android:id="@+id/groups_tv_hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groups_tv_search_hint2" />

    <TextView
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="16sp"
        android:padding="8dp"
        android:textColor="@color/groups_textView_createGroup_background"
        android:id="@+id/groups_tv_createGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groups_tv_createNewGroup" />
</LinearLayout>